--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
-    <title>React App</title>
+		<link rel="icon" href="https://uploads-ssl.webflow.com/5dfd95f78d0e1ee3b32e0f58/5e18f9e72b927d3b76c90f5e_Quote%20Hound.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#000000" />
+		<meta name="description" content="" />
+		<link rel="apple-touch-icon" href="https://uploads-ssl.webflow.com/5dfd95f78d0e1ee3b32e0f58/5e18f9e72b927d3b76c90f5e_Quote%20Hound.png" />
+		<title> Free Commerical Insurance Quote</title>
+	  
 
     <meta name="facebook-domain-verification" content="4tbh5gl4mhcqg90ymjuz3jlrg7oyjz" />
+
+    <script type="text/javascript">
+      /* QuoteHound / Life TY - Premium */
+  
+      console.log('started script for MA')
+      var MediaAlphaExchange = {
+         "data": {
+          "zip": "90210"
+         },
+         "placement_id": "4yclnD1Pz-JicFFmiW0DhV7a86VXHw",
+         "sub_1": "test sub id",
+         "type": "ad_unit",
+         "version": 17
+      };
+  
+      console.log("loaded all vars")
+      MediaAlphaExchange__load('mediaalpha_placeholder');
+  
+      console.log('end of script')
+      </script>
 
   </head>
   <body>
@@ -57,7 +72,7 @@
   
     <input id="leadid_token" name="universal_leadid" type="hidden" value=""/>
 
-    <input type="hidden" id="tele" name="tele" defaultValue />
+    <input type="hidden" id="tele" name="tele"/>
 
 
     <input type="hidden" id="lp" name="lp" /> 
